logs/python-derrick.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/chalk'...
Listing './lib/python3.5/site-packages/derrick'...
Listing './lib/python3.5/site-packages/derrick/commands'...
Listing './lib/python3.5/site-packages/derrick/core'...
Listing './lib/python3.5/site-packages/derrick/detectors'...
Listing './lib/python3.5/site-packages/derrick/detectors/general'...
Listing './lib/python3.5/site-packages/derrick/detectors/image'...
Listing './lib/python3.5/site-packages/derrick/detectors/platform'...
Listing './lib/python3.5/site-packages/derrick/detectors/platform/golang'...
Listing './lib/python3.5/site-packages/derrick/detectors/platform/python'...
Listing './lib/python3.5/site-packages/derrick/rigging'...
Listing './lib/python3.5/site-packages/derrick/rigging/golang_rigging'...
Listing './lib/python3.5/site-packages/derrick/rigging/golang_rigging/templates'...
Listing './lib/python3.5/site-packages/derrick/rigging/maven_rigging'...
Listing './lib/python3.5/site-packages/derrick/rigging/maven_rigging/templates'...
Listing './lib/python3.5/site-packages/derrick/rigging/nodejs_rigging'...
Listing './lib/python3.5/site-packages/derrick/rigging/nodejs_rigging/templates'...
Listing './lib/python3.5/site-packages/derrick/rigging/php_rigging'...
Listing './lib/python3.5/site-packages/derrick/rigging/php_rigging/templates'...
Listing './lib/python3.5/site-packages/derrick/rigging/python_rigging'...
Listing './lib/python3.5/site-packages/derrick/rigging/python_rigging/templates'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.15.dist-info'...
Listing './lib/python3.5/site-packages/pychalk-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/python_derrick-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/regex-2018.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_git'...
Listing './lib/python3.5/site-packages/setuptools_git-1.2.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/detectors'...
Listing './lib/python3.5/site-packages/tests/detectors/image'...
Listing './lib/python3.5/site-packages/tests/detectors/platform'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './lib/python3.5/site-packages/whaaaaat'...
Listing './lib/python3.5/site-packages/whaaaaat/prompts'...
Listing './lib/python3.5/site-packages/whaaaaat-0.5.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
